--- a/package.json
+++ b/package.json
@@ -3,19 +3,24 @@
   "version": "0.0.1",
   "description": "Drag to reorder elements.",
   "license": "MIT",
+  "author": {
+    "name": "Daniel Nagy",
+    "email": "dan@boulevard.io"
+  },
+  "main": "index.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/Boulevard/sortable.git"
   },
-  "main": "index.js",
+  "homepage": "http://Boulevard.github.io/sortable",
   "devDependencies": {
-    "babel-core": "^6.11.4",
-    "babel-preset-es2015": "^6.9.0",
     "bower": "^1.7.9",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-changed": "^1.3.1",
     "gulp-connect": "^5.0.0",
     "gulp-jshint": "^2.0.1",
+    "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.2.4",
     "jshint": "^2.9.2",
     "jshint-stylish": "^2.2.0"
