--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp-clean-css": "^2.0.12",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-inject": "^4.1.0",
     "gulp-jshint": "^2.0.1",
     "gulp-less": "^3.1.0",
