--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blvd-sortable",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Drag to reorder elements.",
   "license": "MIT",
   "author": {
@@ -10,7 +10,7 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/Boulevard/sortable.git"
+    "url": "https://github.com/Boulevard/sortable.git"
   },
   "homepage": "http://Boulevard.github.io/sortable",
   "keywords": [
@@ -44,6 +44,7 @@
     "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-html2js": "^0.2.2",
     "gulp-replace": "^0.5.4",
+    "gulp-template": "^4.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-wrap": "^0.13.0",
     "jshint": "^2.9.2",
