--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   ],
   "devDependencies": {
     "bower": "^1.7.9",
-    "event-stream": "^3.3.4",
+    "event-stream": "3.3.4",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-bump": "^2.2.0",
